# tauri-swift-runtime

./: .gitignore  Cargo.toml  Package.swift  README.md
.github/workflows/: publish.yml
src-rs/: desktop.rs  lib.rs  macos.rs
src-swift/: README.md
src-swift/Sources/Tauri/: Invoke.swift  Logger.swift  Tauri.swift  UiUtils.swift
