[package]
name = "tauri-swift-runtime"
description = "A runtime layer for executing Swift code in Tauri plugins on macOS and iOS"
keywords = ["tauri", "swift", "runtime", "ffi", "macos", "ios"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src-rs/lib.rs"

[dependencies]
tauri = { version = "2.7.0" }
swift-rs = { version = "1.0.7" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
memoffset = "0.9"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
swift-rs = { version = "1.0.7", features = ["build"] }
