[package]
name = "tauri-swift-runtime"
description = "A runtime layer for executing Swift code in Tauri plugins on macOS and iOS"
keywords = ["tauri", "swift", "runtime", "macos", "ios"]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Choochmeque/tauri-swift-runtime"

[lib]
path = "src-rs/lib.rs"

[dependencies]
tauri = { version = "2.7.0", features = ["unstable"]}
swift-rs = { version = "1.0.7" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
memoffset = "0.9"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }
